k8s/ingress/trackmygym-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trackmygym-ingress
  namespace: trackmygym
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # Frontend auf Root
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 5000
